fix to main message breaking out of box inIE. See bug #288

--- a/trunk/qsf/skins/default/print.css
+++ b/trunk/qsf/skins/default/print.css
@@ -84,6 +84,9 @@ a.postlink    {color:black;}
 .iconslegend  {text-align: center;}
 .iconslegend table {border-collapse: collapse; margin-left: auto; margin-right: auto;}
 
+.mainmessage  {text-align: center;}
+.mainmessage .stand table.stand {text-align: center; width: 60%;}
+
 .copyright { margin-bottom: 0; text-align: center; }
 
 .spoiler      {border:1px #555555 solid; color: gray;}
