--- a/trunk/qsf/skins/default/styles.css
+++ b/trunk/qsf/skins/default/styles.css
@@ -184,6 +184,9 @@ a.pagelinks:hover{color:#cc0000;}
 .iconslegend  {text-align: center;}
 .iconslegend table {border-collapse: collapse; margin-left: auto; margin-right: auto;}
 
+.mainmessage  {text-align: center;}
+.mainmessage .stand table.stand {text-align: center; width: 60%;}
+
 .copyright { margin-bottom: 0; text-align: center; }
 
 .spoiler      {border:1px #555555 solid; background-color:#fefefe; color:#fefefe;}
